# extrasensory

./: .gitignore  README.md  pyproject.toml
__test__/: test_hello.py
src/extrasensory/download/: provision.py
src/extrasensory/download/utils/: monitors.py  utilities.py
src/extrasensory/inference/: infer.py
src/extrasensory/prepare/: execution_thread.py  prepare.py
src/extrasensory/prepare/utils/: download.py  graph.py  massage.py
src/extrasensory/train/: train.py
