[project]
name = "extrasensory"
version = "0.1.0"
description = "Uses the tsai library to train up a ML model to do time-series classification on multi-modal data."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ajay Bhargava", email = "bhargava.ajay@gmail.com" }
]
dependencies = [
    "modal>=1.0.3",
    "pandas>=2.3.0",
    "pytest",
    "rich>=14.0.0",
    "tsai>=0.4.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["extrasensory"]
package-dir = {"extrasensory" = "src/extrasensory"}

[tool.ruff]
src = ["src"]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["__test__"]
addopts = "-ra -q"
