[project]
name = "extrasensory"
version = "0.1.0"
description = "Uses the tsai library to train up a ML model to do time-series classification on multi-modal data."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ajay Bhargava", email = "bhargava.ajay@gmail.com" }
]
dependencies = [
    "fastai==2.7.19",
    "fastapi>=0.115.12",
    "fastcore==1.7.29",
    "jupyter>=1.1.1",
    "modal>=1.0.3",
    "pandas>=2.3.0",
    "pytest",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "s3fs>=2025.5.1",
    "tsai>=0.4.0",
    "wandb>=0.20.1",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["extrasensory"]
package-dir = {"extrasensory" = "src/extrasensory"}

[tool.ruff]
src = ["src"]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["__test__"]
addopts = "-ra -q"
